# sync-ad

./: .gitignore  Dockerfile  README.md  docker-compose.yml  insert.sql  pyproject.toml  read_txt.py  test_ldap_3.py
src/: config.py  create_ou.py  database.py  ldap_connection.py  main.py  models.py  ou.txt  settings.py  sync_main.py
src/common/: constants.py  exception.py
src/config/: __init__.py  database.py  ldap.py
src/entities/: __init__.py  enums.py
src/entities/schemas/: __init__.py  ad.py  ad_group.py  ou_data.py
src/exceptions/: __init__.py  ldap_exception.py
src/infrastructure/: database.py  ldap_connection.py  logger.py
src/repositories/: __init__.py  active_directory.py  ad_group.py  ad_ou.py  data.py  ou_data.py
src/services/: __init__.py  active_directory.py  ad.py  ad_group.py  ad_ou.py  database.py  integrations.py  name_modification.py  ou_data.py
src/settings/: __init__.py  database.py  ldap.py
src/utils/: __init__.py  ou_builder.py  time_converter.py
